--- a/public/static/locales/en/product.json
+++ b/public/static/locales/en/product.json
@@ -1,6 +1,8 @@
 {
   "relatedProduct": "You might also be interested in",
   "relatedProduct_plural": "You might also be interested in",
+  "recommendedProduct": "We recommend this product",
+  "recommendedProduct_plural": "We recommend these products",
   "addToBasket": "Add to Basket",
   "buy": "BUY",
   "stock": "{{stockCount}} in stock",
