Adjusting text and styles

--- a/public/static/locales/en/product.json
+++ b/public/static/locales/en/product.json
@@ -1,8 +1,8 @@
 {
   "relatedProduct": "You might also be interested in",
   "relatedProduct_plural": "You might also be interested in",
-  "recommendedProduct": "We recommend this product",
-  "recommendedProduct_plural": "We recommend these products",
+  "othersViewedProducts": "Others have viewed this product",
+  "othersViewedProducts_plural": "Others have viewed these products",
   "addToBasket": "Add to Basket",
   "buy": "BUY",
   "stock": "{{stockCount}} in stock",
